--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -24,8 +24,8 @@
   <tbody>
     <% @songs.each do |song| %>
       <tr>
-        <td><%= song.album %></td>
-        <td><%= song.artist %></td>
+        <td><%= link_to song.album.title, song.album %></td>
+        <td><%= link_to song.artist.name, song.artist %></td>
         <td><%= song.title %></td>
         <td><%= song.sort %></td>
         <td><%= song.slug %></td>
