include artist on play views

--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Artist:</strong>
+  <%= link_to @play.artist.name, @play.artist %>
+</p>
+
+<p>
   <strong>Ratings:</strong>
   <%= @play.ratings %>
 </p>
