--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Song</th>
+      <th>Artist</th>
       <th>Ratings</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @plays.each do |play| %>
       <tr>
         <td><%= link_to play.song.title, play.song %></td>
+        <td><%= link_to play.artist.name, play.artist %></td>
         <td><%= play.ratings %></td>
         <td><%= link_to 'Show', play %></td>
         <td><%= link_to 'Edit', edit_play_path(play) %></td>
