--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :album %><br>
-    <%= f.text_field :album %>
+    <%= f.text_field :album_id %>
   </div>
   <div class="field">
     <%= f.label :artist_id %><br>
