add playtime and tweet_id to plays show views

--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -15,4 +15,14 @@
   <%= @play.ratings %>
 </p>
 
+<p>
+  <strong>Playtime:</strong>
+  <%= @play.playtime %>
+</p>
+
+<p>
+  <strong>Tweet ID:</strong>
+  <%= @play.tweet_id %>
+</p>
+
 <%= link_to 'Back', plays_path %>
