--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Album:</strong>
-  <%= link_to @song.album.title, @song.album %>
+  <%= link_to @song.album.title, @song.album if @song.album %>
 </p>
 
 <p>
