--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Song</h1>
+<h1>Upload New Song</h1>
 
-<%= render 'form' %>
+<%= form_with model: @song, url: songs_path, local: true do |form| %>
+  <%= form.file_field :file %>
+  <%= form.submit 'Upload' %>
+<% end %>
 
 <%= link_to 'Back', songs_path %>
