add year to song views

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -55,6 +55,10 @@
     <%= f.label :rating %><br>
     <%= f.text_field :rating %>
   </div>
+  <div class="field">
+    <%= f.label :year %><br>
+    <%= f.text_field :year %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
