--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -55,5 +55,10 @@
   <%= @song.rating %>
 </p>
 
+<p>
+  <strong>Year:</strong>
+  <%= @song.year %>
+</p>
+
 <%= link_to 'Edit', edit_song_path(@song) %> |
 <%= link_to 'Back', songs_path %>
