--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -16,6 +16,7 @@
       <th>Live</th>
       <th>Remix</th>
       <th>Rating</th>
+      <th>Year</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -34,6 +35,7 @@
         <td><%= song.live %></td>
         <td><%= song.remix %></td>
         <td><%= song.rating %></td>
+        <td><%= song.year %></td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
       </tr>
