--- a/app/views/choosers/show.html.erb
+++ b/app/views/choosers/show.html.erb
@@ -3,8 +3,6 @@
 <%= render @chooser %>
 
 <div>
-  <%= link_to "Edit this chooser", edit_chooser_path(@chooser) %> |
-  <%= link_to "Back to choosers", choosers_path %>
-
-  <%= button_to "Destroy this chooser", @chooser, method: :delete %>
+  <%= link_to "Edit this chooser", edit_stream_chooser_path(@chooser.stream, @chooser) %> |
+  <%= link_to "Back to choosers", stream_choosers_path(@chooser.stream) %>
 </div>
