--- a/app/views/choosers/_form.html.erb
+++ b/app/views/choosers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: chooser) do |form| %>
+<%= form_with(model: [chooser.stream, chooser]) do |form| %>
   <% if chooser.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(chooser.errors.count, "error") %> prohibited this chooser from being saved:</h2>
@@ -10,16 +10,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :song_id, style: "display: block" %>
-    <%= form.text_field :song_id %>
-  </div>
-
-  <div>
-    <%= form.label :stream_id, style: "display: block" %>
-    <%= form.text_field :stream_id %>
-  </div>
 
   <div>
     <%= form.label :featured, style: "display: block" %>
