--- a/app/views/choosers/edit.html.erb
+++ b/app/views/choosers/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this chooser", @chooser %> |
-  <%= link_to "Back to choosers", choosers_path %>
+  <%= link_to "Show this chooser", [@chooser.stream, @chooser] %> |
+  <%= link_to "Back to choosers", stream_choosers_path(@chooser.stream) %>
 </div>
