--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Stream:</strong>
+  <%= link_to @play.stream.name, @play.stream %>
+</p>
+
+<p>
   <strong>Ratings:</strong>
   <%= @play.ratings.count %>
 </p>
