--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Song</th>
       <th>Requested at</th>
+      <th>Played</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +15,9 @@
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-        <td><%= request.song %></td>
+        <td><%= link_to request.song.title, request.song %></td>
         <td><%= request.requested_at %></td>
+        <td><%= request.played %></td>
         <td><%= link_to 'Show', stream_request_path(request.stream, request) %></td>
       </tr>
     <% end %>
