--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Twitter handle:</strong>
-  <%= @request.twitter_handle %>
-</p>
-
-<p>
   <strong>Song:</strong>
-  <%= @request.song %>
+  <%= link_to @request.song.title, @request.song %>
 </p>
 
 <p>
   <strong>Requested at:</strong>
   <%= @request.requested_at %>
+</p>
+
+<p>
+  <strong>Played:</strong>
+  <%= @request.played %>
 </p>
 
 <%= link_to 'Back', stream_requests_path(@request.stream) %>
