add artist name override to songs

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :artist_id %>
   </div>
   <div class="field">
+    <%= f.label :artist_name_override %><br>
+    <%= f.text_field :artist_name_override %>
+  </div>
+  <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
