--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Artist Name Override:</strong>
+  <%= @song.artist_name_override %>
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @song.title %>
 </p>
